--- a/hearth/index.html
+++ b/hearth/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="./css/fonts.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/media.css">
-    <script src="./js/swiper-bundle.min.js" defer></script>
+    <link rel="stylesheet" href="./css/main.css">
     <script src="./js/main.js" defer></script>
     <title>Пекарня очаг</title>
 </head>
@@ -55,7 +51,7 @@
                     </div>
                     <button class="header__cart js-open-cart">
                         <span class="header__cart-ico">
-                            <img loading="lazy" src="./img/icons/cart.svg" alt="Иконка корзины">
+                            <img src="./img/icons/cart.svg" alt="Иконка корзины">
                             <span class="header__cart-amount">12</span>
                         </span>
                         <span class="header__cart-total">9999 P</span>
@@ -71,15 +67,14 @@
                                     <div class="cart__content">
                                         <picture class="cart__img">
                                             <source srcset="./img/product.webp" type="image/webp">
-                                            <source srcset="./img/product.png" type="image/png">
-                                            <img loading="lazy" src="./img/product.png" alt="Фото товара">
+                                            <img src="./img/product.jpg" alt="Фото товара">
                                         </picture>
                                         <div class="cart__info">
                                             <div class="cart__info-top">
                                                 <span class="cart__parameters">1200 гр 35∅</span>
                                                 <span class="cart__price">8910 р</span>
                                             </div>
-                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
+                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="tel"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                         </div>
                                     </div>
                                 </div>
@@ -88,15 +83,14 @@
                                     <div class="cart__content">
                                         <picture class="cart__img">
                                             <source srcset="./img/product.webp" type="image/webp">
-                                            <source srcset="./img/product.png" type="image/png">
-                                            <img loading="lazy" src="./img/product.png" alt="Фото товара">
+                                            <img src="./img/product.jpg" alt="Фото товара">
                                         </picture>
                                         <div class="cart__info">
                                             <div class="cart__info-top">
                                                 <span class="cart__parameters">1200 гр 35∅</span>
                                                 <span class="cart__price">810 р</span>
                                             </div>
-                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
+                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="tel"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                         </div>
                                     </div>
                                 </div>
@@ -105,15 +99,14 @@
                                     <div class="cart__content">
                                         <picture class="cart__img">
                                             <source srcset="./img/product.webp" type="image/webp">
-                                            <source srcset="./img/product.png" type="image/png">
-                                            <img loading="lazy" src="./img/product.png" alt="Фото товара">
+                                            <img loading="lazy" src="./img/product.jpg" alt="Фото товара">
                                         </picture>
                                         <div class="cart__info">
                                             <div class="cart__info-top">
                                                 <span class="cart__parameters">1200 гр 35∅</span>
                                                 <span class="cart__price">810 р</span>
                                             </div>
-                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
+                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="tel"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                         </div>
                                     </div>
                                 </div>
@@ -134,14 +127,10 @@
         <div class="banner__bg-container">
             <picture class="banner__bg">
                 <source srcset="./img/banner_bg.webp" type="image/webp">
-                <source srcset="./img/banner_bg.jpg" type="image/jpg">
-                <source srcset="./img/banner_bg.png" type="image/png">
                 <img src="./img/banner_bg.png" alt="Фон">
             </picture>
             <picture class="banner__bg-m">
                 <source srcset="./img/banner_bg-m.webp" type="image/webp">
-                <source srcset="./img/banner_bg-m.jpg" type="image/jpg">
-                <source srcset="./img/banner_bg-m.png" type="image/png">
                 <img src="./img/banner_bg-m.png" alt="Фон">
             </picture>
         </div>
@@ -270,7 +259,6 @@
                             </div>
                             <picture class="promo__bg">
                                 <source srcset="./img/promo_bg.webp" type="image/webp">
-                                <source srcset="./img/promo_bg.png" type="image/png">
                                 <img src="./img/promo_bg.png" alt="Фон">
                             </picture>
                         </div>
@@ -285,7 +273,6 @@
                             </div>
                             <picture class="promo__bg">
                                 <source srcset="./img/promo_bg.webp" type="image/webp">
-                                <source srcset="./img/promo_bg.png" type="image/png">
                                 <img src="./img/promo_bg.png" alt="Фон">
                             </picture>
                         </div>
@@ -300,7 +287,6 @@
                             </div>
                             <picture class="promo__bg">
                                 <source srcset="./img/promo_bg.webp" type="image/webp">
-                                <source srcset="./img/promo_bg.png" type="image/png">
                                 <img src="./img/promo_bg.png" alt="Фон">
                             </picture>
                         </div>
@@ -412,9 +398,7 @@
                         <div class="product__top">
                             <picture class="product__img">
                                 <source srcset="./img/product.webp" type="image/webp">
-                                <source srcset="./img/product.jpg" type="image/jpg">
-                                <source srcset="./img/product.png" type="image/png">
-                                <img loading="lazy" src="./img/product.png" alt="Фото товара">
+                                <img src="./img/product.jpg" alt="Фото товара">
                             </picture>
                             <span class="product__art">Арт 107</span>
                             <a href="#" class="product__rev">Отзывы (63) Получить скидку 10%</a>
@@ -452,7 +436,7 @@
                                 </div>
                             </fieldset>
                             <div class="product__bottom">
-                                <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
+                                <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="tel"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                 <button type="submit" class="button button_product">В корзину</button>
                             </div>
                         </form>
@@ -461,9 +445,7 @@
                         <div class="product__top">
                             <picture class="product__img">
                                 <source srcset="./img/product.webp" type="image/webp">
-                                <source srcset="./img/product.jpg" type="image/jpg">
-                                <source srcset="./img/product.png" type="image/png">
-                                <img loading="lazy" src="./img/product.png" alt="Фото товара">
+                                <img src="./img/product.jpg" alt="Фото товара">
                             </picture>
                             <span class="product__art">Арт 107</span>
                             <a href="#" class="product__rev">Отзывы (63) Получить скидку 10%</a>
@@ -501,7 +483,7 @@
                                 </div>
                             </fieldset>
                             <div class="product__bottom">
-                                <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
+                                <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="tel"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                 <button type="submit" class="button button_product">В корзину</button>
                             </div>
                         </form>
@@ -510,9 +492,7 @@
                         <div class="product__top">
                             <picture class="product__img">
                                 <source srcset="./img/product.webp" type="image/webp">
-                                <source srcset="./img/product.jpg" type="image/jpg">
-                                <source srcset="./img/product.png" type="image/png">
-                                <img loading="lazy" src="./img/product.png" alt="Фото товара">
+                                <img src="./img/product.jpg" alt="Фото товара">
                             </picture>
                             <span class="product__art">Арт 107</span>
                             <a href="#" class="product__rev">Отзывы (63) Получить скидку 10%</a>
@@ -550,7 +530,7 @@
                                 </div>
                             </fieldset>
                             <div class="product__bottom">
-                                <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
+                                <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="tel"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                 <button type="submit" class="button button_product">В корзину</button>
                             </div>
                         </form>
@@ -559,9 +539,7 @@
                         <div class="product__top">
                             <picture class="product__img">
                                 <source srcset="./img/product.webp" type="image/webp">
-                                <source srcset="./img/product.jpg" type="image/jpg">
-                                <source srcset="./img/product.png" type="image/png">
-                                <img loading="lazy" src="./img/product.png" alt="Фото товара">
+                                <img src="./img/product.jpg" alt="Фото товара">
                             </picture>
                             <span class="product__art">Арт 107</span>
                             <a href="#" class="product__rev">Отзывы (63) Получить скидку 10%</a>
@@ -599,7 +577,7 @@
                                 </div>
                             </fieldset>
                             <div class="product__bottom">
-                                <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
+                                <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="tel"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                 <button type="submit" class="button button_product">В корзину</button>
                             </div>
                         </form>
@@ -608,9 +586,7 @@
                         <div class="product__top">
                             <picture class="product__img">
                                 <source srcset="./img/product.webp" type="image/webp">
-                                <source srcset="./img/product.jpg" type="image/jpg">
-                                <source srcset="./img/product.png" type="image/png">
-                                <img loading="lazy" src="./img/product.png" alt="Фото товара">
+                                <img src="./img/product.jpg" alt="Фото товара">
                             </picture>
                             <span class="product__art">Арт 107</span>
                             <a href="#" class="product__rev">Отзывы (63) Получить скидку 10%</a>
@@ -648,7 +624,7 @@
                                 </div>
                             </fieldset>
                             <div class="product__bottom">
-                                <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
+                                <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="tel"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                 <button type="submit" class="button button_product">В корзину</button>
                             </div>
                         </form>
@@ -657,9 +633,7 @@
                         <div class="product__top">
                             <picture class="product__img">
                                 <source srcset="./img/product.webp" type="image/webp">
-                                <source srcset="./img/product.jpg" type="image/jpg">
-                                <source srcset="./img/product.png" type="image/png">
-                                <img loading="lazy" src="./img/product.png" alt="Фото товара">
+                                <img src="./img/product.jpg" alt="Фото товара">
                             </picture>
                             <span class="product__art">Арт 107</span>
                             <a href="#" class="product__rev">Отзывы (63) Получить скидку 10%</a>
@@ -697,7 +671,7 @@
                                 </div>
                             </fieldset>
                             <div class="product__bottom">
-                                <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
+                                <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="tel"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                 <button type="submit" class="button button_product">В корзину</button>
                             </div>
                         </form>
@@ -749,8 +723,7 @@
                                 <div class="review__img-wrap">
                                     <picture class="review__img">
                                         <source srcset="./img/product.webp" type="image/webp">
-                                        <source srcset="./img/product.png" type="image/png">
-                                        <img loading="lazy" src="./img/product.png" alt="Фото товара">
+                                        <img src="./img/product.jpg" alt="Фото товара">
                                     </picture>
                                 </div>
                                 <div class="review__body">
@@ -763,8 +736,7 @@
                                 <div class="review__img-wrap">
                                     <picture class="review__img">
                                         <source srcset="./img/product.webp" type="image/webp">
-                                        <source srcset="./img/product.png" type="image/png">
-                                        <img loading="lazy" src="./img/product.png" alt="Фото товара">
+                                        <img src="./img/product.jpg" alt="Фото товара">
                                     </picture>
                                 </div>
                                 <div class="review__body">
@@ -777,8 +749,7 @@
                                 <div class="review__img-wrap">
                                     <picture class="review__img">
                                         <source srcset="./img/product.webp" type="image/webp">
-                                        <source srcset="./img/product.png" type="image/png">
-                                        <img loading="lazy" src="./img/product.png" alt="Фото товара">
+                                        <img src="./img/product.jpg" alt="Фото товара">
                                     </picture>
                                 </div>
                                 <div class="review__body">
