--- a/hearth/item.html
+++ b/hearth/item.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="./css/fonts.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/media.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <script src="./js/main.js" defer></script>
     <title>Пироги с мясом</title>
 </head>
 <body>
@@ -33,9 +31,9 @@
                         </ul>
                     </nav>
                 </div>
-                <a href="./index.html" class="header__logo">
-                    <img src="./img/logo.svg" alt="Логотип" class="header__logo-img">
-                </a>
+                <div class="header__logo">
+                    <img loading="lazy" src="./img/logo.svg" alt="Логотип" class="header__logo-img">
+                </div>
                 <div class="header__side">
                     <div class="header__contacts">
                         <span class="button button_recall">Звоните, мы работаем</span>
@@ -59,6 +57,7 @@
                         <span class="header__cart-total">9999 P</span>
                     </button>
                     <div class="cart js-cart">
+                        <span class="cart__close js-open-cart"></span>
                         <span class="cart__title">Ваша корзина</span>
                         <a href="#" class="button button_cart">Получить скидку 10%</a>
                         <form class="cart__body">
@@ -68,15 +67,14 @@
                                     <div class="cart__content">
                                         <picture class="cart__img">
                                             <source srcset="./img/product.webp" type="image/webp">
-                                            <source srcset="./img/product.png" type="image/png">
-                                            <img src="./img/product.png" alt="Фото товара">
+                                            <img src="./img/product.jpg" alt="Фото товара">
                                         </picture>
                                         <div class="cart__info">
                                             <div class="cart__info-top">
                                                 <span class="cart__parameters">1200 гр 35∅</span>
                                                 <span class="cart__price">8910 р</span>
                                             </div>
-                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
+                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="tel"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                         </div>
                                     </div>
                                 </div>
@@ -85,15 +83,14 @@
                                     <div class="cart__content">
                                         <picture class="cart__img">
                                             <source srcset="./img/product.webp" type="image/webp">
-                                            <source srcset="./img/product.png" type="image/png">
-                                            <img src="./img/product.png" alt="Фото товара">
+                                            <img src="./img/product.jpg" alt="Фото товара">
                                         </picture>
                                         <div class="cart__info">
                                             <div class="cart__info-top">
                                                 <span class="cart__parameters">1200 гр 35∅</span>
                                                 <span class="cart__price">810 р</span>
                                             </div>
-                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
+                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="tel"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                         </div>
                                     </div>
                                 </div>
@@ -102,15 +99,14 @@
                                     <div class="cart__content">
                                         <picture class="cart__img">
                                             <source srcset="./img/product.webp" type="image/webp">
-                                            <source srcset="./img/product.png" type="image/png">
-                                            <img src="./img/product.png" alt="Фото товара">
+                                            <img loading="lazy" src="./img/product.jpg" alt="Фото товара">
                                         </picture>
                                         <div class="cart__info">
                                             <div class="cart__info-top">
                                                 <span class="cart__parameters">1200 гр 35∅</span>
                                                 <span class="cart__price">810 р</span>
                                             </div>
-                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
+                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="tel"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                         </div>
                                     </div>
                                 </div>
@@ -131,13 +127,11 @@
         <div class="banner__bg-container">
             <picture class="banner__bg">
                 <source srcset="./img/banner_bg.webp" type="image/webp">
-                <source srcset="./img/banner_bg.jpg" type="image/jpg">
                 <source srcset="./img/banner_bg.png" type="image/png">
                 <img src="./img/banner_bg.png" alt="Фон">
             </picture>
             <picture class="banner__bg-m">
                 <source srcset="./img/banner_bg-m.webp" type="image/webp">
-                <source srcset="./img/banner_bg-m.jpg" type="image/jpg">
                 <source srcset="./img/banner_bg-m.png" type="image/png">
                 <img src="./img/banner_bg-m.png" alt="Фон">
             </picture>
@@ -256,7 +250,10 @@
             <div class="container">
                 <h2 class="item__title">Пироги с мясом - 600 г. 550 рублей - купить: <a href="tel:+74957247292">+7 (495) 724-72-92</a></h2>
                 <div class="item__card">
-                    <div class="item__img"><img src="./img/item.png" alt=""></div>
+                    <picture class="item__img">
+                        <source srcset="./img/item.webp" type="image/webp">
+                        <img src="./img/item.jpg" alt="Пирог с мясом">
+                    </picture>
                     <div class="compound">
                         <span class="compound__title">Состав на 600 грамм:</span>
                         <span class="compound__head">тесто</span>
@@ -428,8 +425,6 @@
             </form>
         </div>
     </div>
-
-    <script src="./js/swiper-bundle.min.js"></script>
-    <script src="./js/main.js"></script>
+    
 </body>
 </html>
