--- a/hearth/index.html
+++ b/hearth/index.html
@@ -127,10 +127,12 @@
         <div class="banner__bg-container">
             <picture class="banner__bg">
                 <source srcset="./img/banner_bg.webp" type="image/webp">
+                <source srcset="./img/banner_bg.png" type="image/png">
                 <img src="./img/banner_bg.png" alt="Фон">
             </picture>
             <picture class="banner__bg-m">
                 <source srcset="./img/banner_bg-m.webp" type="image/webp">
+                <source srcset="./img/banner_bg-m.png" type="image/png">
                 <img src="./img/banner_bg-m.png" alt="Фон">
             </picture>
         </div>
@@ -139,7 +141,7 @@
                 <div class="banner__logo-wrap">
                     <img loading="lazy" src="./img/logo.svg" alt="Логотип" class="banner__logo">
                 </div>
-                <h1 class="banner__title">Лучшие осетинские пироги&nbspи&nbspпицца в Москве</h1>
+                <h1 class="banner__title">Лучшие осетинские пироги&nbsp;и&nbsp;пицца в Москве</h1>
             </div>
         </div>
     </section>
@@ -296,20 +298,19 @@
             </div>
         </section>
         <section class="menu">
-            <h2></h2>
             <div class="container">
                 <div class="menu__wrapper-top">
                     <a href="#" class="menu__item menu__item_big">
                         <img loading="lazy" src="./img/menu_item-1.jpg" alt="Осетинские пироги" class="menu__item-img">
                         <div class="menu__item-body">
-                            <span class="menu__item-title">Осетинские пироги</span>
+                            <h3 class="menu__item-title">Осетинские пироги</h3>
                             <span class="menu__item-amount">(111)</span>
                         </div>
                     </a>
                     <a href="#" class="menu__item menu__item_big">
                         <img loading="lazy" src="./img/menu_item-2.jpg" alt="Пицца" class="menu__item-img">
                         <div class="menu__item-body">
-                            <span class="menu__item-title">Пицца</span>
+                            <h3 class="menu__item-title">Пицца</h3>
                             <span class="menu__item-amount">(111)</span>
                         </div>
                     </a>
@@ -318,21 +319,21 @@
                     <a href="#" class="menu__item">
                         <img loading="lazy" src="./img/menu_item-3.jpg" alt="Салаты" class="menu__item-img">
                         <div class="menu__item-body">
-                            <span class="menu__item-title">Салаты</span>
+                            <h3 class="menu__item-title">Салаты</h3>
                             <span class="menu__item-amount">(111)</span>
                         </div>
                     </a>
                     <a href="#" class="menu__item">
                         <img loading="lazy" src="./img/menu_item-4.jpg" alt="Напитки" class="menu__item-img">
                         <div class="menu__item-body">
-                            <span class="menu__item-title">Напитки</span>
+                            <h3 class="menu__item-title">Напитки</h3>
                             <span class="menu__item-amount">(111)</span>
                         </div>
                     </a>
                     <a href="#" class="menu__item">
                         <img loading="lazy" src="./img/menu_item-5.jpg" alt="Наборы" class="menu__item-img">
                         <div class="menu__item-body">
-                            <span class="menu__item-title">Наборы</span>
+                            <h3 class="menu__item-title">Наборы</h3>
                             <span class="menu__item-amount">(111)</span>
                         </div>
                     </a>
