--- a/hearth/contacts.html
+++ b/hearth/contacts.html
@@ -142,7 +142,7 @@
                 <div class="banner__logo-wrap">
                     <img loading="lazy" src="./img/logo.svg" alt="Логотип" class="banner__logo">
                 </div>
-                <h1 class="banner__title">Лучшие осетинские пироги&nbspи&nbspпицца в Москве</h1>
+                <h1 class="banner__title">Лучшие осетинские пироги&nbsp;и&nbsp;пицца в Москве</h1>
             </div>
         </div>
     </section>
